hphp/test/slow/shapes/bare_shape_key.php.expectf
Fatal error: Shape field name must be a nonempty single-quoted string or a class constant in %s/test/slow/shapes/bare_shape_key.php on line 8